--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <a href="hi">hi</a>
-
-    <i class="ic-bell"></i>
-    <i class="ic-search" aria-label="검색"></i>
+    <div class="container">
+         <strong class="tag-red">
+           특가
+         </strong>
+         <strong class="tag-gray">무료배송</strong>
+         <strong class="tag-green">
+           첫 리뷰 두 배 적립
+         </strong>
+      </div>
+    </div>
   </body>
 </html>
