💄 Implement price components

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <i class="ic-star is-active"></i>
             <i class="ic-star is-active"></i>
             <i class="ic-star is-active"></i>
-          </div>
+           </div>
           <div class="star-rating-20">
             <i class="ic-star is-active"></i>
             <i class="ic-star is-active"></i>
@@ -75,7 +75,29 @@
             <i class="ic-star is-active"></i>
             <i class="ic-star is-active"></i>
           </div>
+        </div>
+
+        <div>
+          <div class="price-off">
+            <strong class="amount">40,000</strong>
+            <span class="currency">원</span>
           </div>
+
+          <div class="price-16">
+            <strong class="amount">40,000</strong>
+            <span class="currency">원</span>
+          </div>
+
+          <div class="price-20">
+            <strong class="amount">40,000</strong>
+            <span class="currency">원</span>
+          </div>
+
+          <div class="price-32">
+            <strong class="amount">40,000</strong>
+            <span class="currency">원</span>
+          </div>
+        </div>
          </div>
       </div>
     </div>
