--- a/index.html
+++ b/index.html
@@ -25,80 +25,107 @@
   </head>
   <body>
     <div class="container">
-         <div>
-          <strong class="tag-red">
-            특가
-          </strong>
-          <strong class="tag-gray">무료배송</strong>
-          <strong class="tag-green">
-            첫 리뷰 두 배 적립
-          </strong>         
-         </div>
+      <div>
+        <strong class="tag-red"> 특가 </strong>
+        <strong class="tag-gray">무료배송</strong>
+        <strong class="tag-green"> 첫 리뷰 두 배 적립 </strong>
+      </div>
 
-         <div>
-           <div class="avatar-24">
-            <img src="./assets/images/img-user-01.jpg"
-             alt="사달라 아저씨" />
-           </div>
-           <div class="avatar-32">
-            <img src="./assets/images/img-user-01.jpg" 
-            alt="사달라 아저씨" />
-           </div>
-         </div>
+      <div>
+        <div class="avatar-24">
+          <img src="./assets/images/img-user-01.jpg" alt="사달라 아저씨" />
+        </div>
+        <div class="avatar-32">
+          <img src="./assets/images/img-user-01.jpg" alt="사달라 아저씨" />
+        </div>
+      </div>
 
-         <div>
-           <div class="star-rating-13">
-             <i class="ic-star is-active"></i>
-             <i class="ic-star is-active"></i>
-             <i class="ic-star is-active"></i>
-             <i class="ic-star is-active"></i>
-             <i class="ic-star is-active"></i>
-           </div>
-           <div class="star-rating-16">
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-           </div>
-          <div class="star-rating-20">
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-          </div>
-          <div class="star-rating-24">
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-            <i class="ic-star is-active"></i>
-          </div>
+      <div>
+        <div class="star-rating-13">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
+        <div class="star-rating-16">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
+        <div class="star-rating-20">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
+        <div class="star-rating-24">
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+          <i class="ic-star is-active"></i>
+        </div>
+      </div>
+
+      <div>
+        <div class="price-off">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
         </div>
 
-        <div>
-          <div class="price-off">
-            <strong class="amount">40,000</strong>
-            <span class="currency">원</span>
-          </div>
-
-          <div class="price-16">
-            <strong class="amount">40,000</strong>
-            <span class="currency">원</span>
-          </div>
-
-          <div class="price-20">
-            <strong class="amount">40,000</strong>
-            <span class="currency">원</span>
-          </div>
-
-          <div class="price-32">
-            <strong class="amount">40,000</strong>
-            <span class="currency">원</span>
-          </div>
+        <div class="price-16">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
         </div>
-         </div>
+
+        <div class="price-20">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+
+        <div class="price-32">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+      </div>
+
+      <div>
+        <button tpye:="button" class="btn-primary btn-32">버튼입니다</button>
+        <button tpye:="button" class="btn-secondary btn-32">버튼입니다</button>
+        <button tpye:="button" class="btn-outlined btn-32">버튼입니다</button>
+        <button tpye:="button" class="btn-ghost btn-32">버튼입니다</button>
+      </div>
+
+      <div>
+        <button tpye:="button" class="btn-primary btn-40">버튼입니다</button>
+        <button tpye:="button" class="btn-secondary btn-40">버튼입니다</button>
+        <button tpye:="button" class="btn-outlined btn-40">버튼입니다</button>
+        <button tpye:="button" class="btn-ghost btn-40">버튼입니다</button>
+      </div>
+
+      <div>
+        <button tpye:="button" class="btn-primary btn-48">버튼입니다</button>
+        <button tpye:="button" class="btn-secondary btn-48">버튼입니다</button>
+        <button tpye:="button" class="btn-outlined btn-48">버튼입니다</button>
+        <button tpye:="button" class="btn-ghost btn-48">버튼입니다</button>
+      </div>
+
+      <div>
+        <button tpye:="button" class="btn-primary btn-55" >버튼입니다</button>
+        <button tpye:="button" class="btn-secondary btn-55" >버튼입니다</button>
+        <button tpye:="button" class="btn-outlined btn-55" >버튼입니다</button>
+        <button tpye:="button" class="btn-ghost btn-55" >버튼입니다</button>
+      </div>
+
+      <div>
+        <button tpye:="button" class="btn-primary btn-55" disabled>버튼입니다</button>
+        <button tpye:="button" class="btn-secondary btn-55" disabled>버튼입니다</button>
+        <button tpye:="button" class="btn-outlined btn-55" disabled>버튼입니다</button>
+        <button tpye:="button" class="btn-ghost btn-55" disabled>버튼입니다</button>
       </div>
     </div>
   </body>
