--- a/index.html
+++ b/index.html
@@ -101,18 +101,17 @@
                     <strong class="badge">5</strong>
                   </a>
 
-                  <div class="my-menu">
+                  <div class="my-menu  sm-hidden">
                     <button
-                      class="my-menu-button sm-hidden"
+                      class="my-menu-button is-active"
                       type="button"
                       aria-label="마이메뉴 열기 버튼"
                     >
-                      <div class="avatar-32">
+                   
                         <img
                           src="./assets/images/img-user-01.jpg"
                           alt="사달라 아저씨"
-                        />
-                      </div>
+                        />   
                     </button>
 
                     <div class="my-menu-content">
