--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div class="avatar-24">
             <img src="./assets/images/img-user-01.jpg" alt="사달라 아저씨" />
           </div>
-          <strong class="username">사달라사달라사달라사달라사달라사달라</strong>
+          <strong class="username">사달라</strong>
          </a>
       </div>
   
@@ -189,8 +189,45 @@
       <nav class="sidebar-nav">
         <h2 class="visually-hidden">메뉴</h2>
 
-       <div class="drawer-menu">
-        <button type="drawer-menu-button">
+        <div class="drawer-menu is-community">
+          <button class="drawer-menu-button" type="button">
+            <i class="ic-community" aria-hidden></i> 
+            커뮤니티
+            <i class="ic-chevron" aria-hidden></i>
+          </button>
+      
+          <div class="drawer-menu-content">
+            <ul class="drawer-menu-list">
+              <li class="drawer-menu-item">
+                <a href="/">홈</a>
+              </li>
+              <li class="drawer-menu-item">
+                <a href="/">사진</a>
+              </li>
+              <li class="drawer-menu-item">
+                <a href="/">집들이</a>
+              </li>
+              <li class="drawer-menu-item ">
+                <a href="/">노하우</a>
+              </li>
+              <li class="drawer-menu-item ">
+                <a href="/">전문가집들이</a>
+              </li>
+              <li class="drawer-menu-item">
+                <a href="/">셀프가이드</a>
+              </li>
+              <li class="drawer-menu-item">
+                <a href="/">질문과답변</a>
+              </li>
+              <li class="drawer-menu-item">
+                <a href="/">이벤트</a>
+              </li>
+            </ul>
+          </div>
+         </div>
+
+       <div class="drawer-menu is-open is-active  is-store">
+        <button class="drawer-menu-button" type="button">
           <i class="ic-store" aria-hidden></i> 
           스토어
           <i class="ic-chevron" aria-hidden></i>
@@ -201,11 +238,30 @@
             <li class="drawer-menu-item"><a href="/">스토어</a></li>
             <li class="drawer-menu-item"><a href="/">카테고리</a></li>
             <li class="drawer-menu-item"><a href="/">신혼가구</a></li>
-            <li class="drawer-menu-item">
+            <li class="drawer-menu-item is-active">
               <a href="/">
                 기획전
                 <i class="ic-new" lang="en" aria-label="New"></i>
               </a>
+            </li>
+          </ul>
+        </div>
+       </div>
+
+       <div class="drawer-menu is-expert">
+        <button class="drawer-menu-button" type="button">
+          <i class="ic-expert" aria-hidden></i> 
+          인테리어시공
+          <i class="ic-chevron" aria-hidden></i>
+        </button>
+    
+        <div class="drawer-menu-content">
+          <ul class="drawer-menu-list">
+            <li class="drawer-menu-item">
+              <a href="/">시공홈</a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">시공스토어</a>
             </li>
           </ul>
         </div>
