--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
               </div>
 
               <div class="gnb-right">
-                <div class="gnb-search">
-                  <div class="input-group lg-only">
+                <div class="gnb-search lg-only">
+                  <div class="input-group">
                     <i class="ic-search" aria-hidden></i>
                     <input
                       class="form-input"
@@ -268,9 +268,30 @@
     
         <div class="drawer-menu-content">
           <ul class="drawer-menu-list">
-            <li class="drawer-menu-item"><a href="/">스토어</a></li>
-            <li class="drawer-menu-item"><a href="/">카테고리</a></li>
-            <li class="drawer-menu-item"><a href="/">신혼가구</a></li>
+            <li class="drawer-menu-item">
+              <a href="/">스토어</a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">카테고리</a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">신혼가구</a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">베스트</a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">오늘의딜</a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">연휴특가</a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">월동준비</a>
+            </li>
+            <li class="drawer-menu-item">
+              <a href="/">리퍼마켓</a>
+            </li>
             <li class="drawer-menu-item is-active">
               <a href="/">
                 기획전
@@ -373,6 +394,8 @@
        </div>
      </div>
     </aside>
+
+  
     
     <div class="overlay" aria-hidden></div>
   </body>
