🚧 Align and style .lnb-items and make .lnb-list scrollable

--- a/index.html
+++ b/index.html
@@ -398,12 +398,12 @@
     <nav class="lnb">
       <div class="container">
         <div class="row">
-          <div class="com-sm-4">
+          <div class="col-sm-4">
             <h1 class="visually-hidden">스토어 메뉴</h1>
 
       
             <ul class="lnb-list">
-              <li class="lnb-item">
+              <li class="lnb-item is-active">
                 <a href="/">스토어</a>
               </li>
               <li class="lnb-item">
